css/style.css
/* Selected font families: https://fonts.google.com/share?selection.family=Montserrat:ital,wght@0,300;0,500;0,700;1,300|Source+Code+Pro */

* {
    font-family: Montserrat;
    font-weight: 300;
    background-color: #FBFBFB;
    /*border: 2px solid red;*/
}

h1, h2, h3 {
    font-weight: 500;
}

.main-body {
    text-align: center;
    max-width: 60%;
    margin: 0 auto;
    margin-bottom: 20px;
}

/* This solves the issue where the HTML indentation was being treated as a whitespace at the starting of each line in <pre> */
pre {
    white-space: pre-line;
}

a {
    color: #FE735E;
    text-decoration: none;
    font-weight: 500;
}

ul.myUL, ol.myUL {
    display: inline-block;
    text-align: left;
}

.recipe-header-image {
    height: auto;
    width: 500px;
}

.homepage-hero-image {
    height: auto;
    width: 300px;
}

a#button {
    background-color: #FE735E;
    color: #FBFBFB;
    padding: 10px 20px;
    border: 2px solid #FE735E;
    border-radius: 8px;
    margin-top: 20px;
    display: inline-block;
}

a#button:hover {
    background-color: #FBFBFB;
    color: #FE735E;
    border: 2px solid #FE735E;
}

